--- a/app/views/cadastro.ejs
+++ b/app/views/cadastro.ejs
@@ -30,28 +30,40 @@
 		</nav>
 
 	    <div class="container">
+
+			<% if (validacao.length) { %>
+
+				<div class="alert alert-danger">
+					<ul>
+						<% for (var i=0;i < validacao.length;i++) { %>
+							<li><%= validacao[i].msg %></li>
+						<% } %>
+					</ul>
+				</div>
+
+			<% } %>
 	    		
-			<form class="form-cadastro">
+			<form class="form-cadastro" action="/cadastrar" method="POST">
 			
 				<div class="row">
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="nome" class="col-sm-2 col-form-label">Nome</label>
-							<input type="nome" class="form-control" id="nome" placeholder="Nome">
+							<input type="nome" class="form-control" id="nome" name="nome" value="<%= formData.nome %>" placeholder="Nome">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="usuario" class="col-sm-2 col-form-label">Usuário</label>
-							<input type="usuario" class="form-control" id="usuario" placeholder="Usuário">
+							<input type="usuario" class="form-control" id="usuario" name="usuario" value="<%= formData.usuario %>" placeholder="Usuário">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="senha" class="col-sm-2 col-form-label">Senha</label>
-							<input type="password" class="form-control" id="senha" placeholder="Password">
+							<input type="password" class="form-control" id="senha" name="senha" value="<%= formData.senha %>" placeholder="Password">
 						</div>
 					</div>
 				</div>
@@ -59,45 +71,57 @@
 				<div class="form-group row">
 				
         			<div class="col-xs-2">
-        				<img src="images/casa_arryn.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="arryn"> Casa Arryn
-						</center>
+						<label>
+							<img src="images/casa_arryn.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="arryn" <% if (formData.casa=="arryn") { %>checked<% } %>> Casa Arryn
+							</center>
+						</label>
         			</div>
 					
 					<div class="col-xs-2">
-        				<img src="images/casa_baratheon.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="baratheon"> Casa Baratheon
-						</center>
+						<label>
+							<img src="images/casa_baratheon.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="baratheon" <% if (formData.casa=="baratheon") { %>checked<% } %>> Casa Baratheon
+							</center>
+						</label>
         			</div>
 					
 					<div class="col-xs-2">
-        				<img src="images/casa_greyjoy.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="greyjoy"> Casa Greyjoy
-						</center>
+						<label>
+							<img src="images/casa_greyjoy.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="greyjoy" <% if (formData.casa=="greyjoy") { %>checked<% } %>> Casa Greyjoy
+							</center>
+						</label>
         			</div>
 					
 					<div class="col-xs-2">
-        				<img src="images/casa_lannister.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="lannister"> Casa Lannister
-						</center>
+						<label>
+							<img src="images/casa_lannister.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="lannister" <% if (formData.casa=="lannister") { %>checked<% } %>> Casa Lannister
+							</center>
+						</label>
         			</div>
 					
 					<div class="col-xs-2">
-        				<img src="images/casa_martell.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="martell"> Casa Martell
-						</center>
+						<label>
+							<img src="images/casa_martell.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="martell" <% if (formData.casa=="martell") { %>checked<% } %>> Casa Martell
+							</center>
+						</label>
         			</div>
 					
 					<div class="col-xs-2">
-        				<img src="images/casa_stark.jpg" class="img-responsive img-radio">
-						<center>
-							<input type="radio" id="left-item" name="casa" value="stark"> Casa Stark
-						</center>
+						<label>
+							<img src="images/casa_stark.jpg" class="img-responsive img-radio">
+							<center>
+								<input type="radio" id="left-item" name="casa" value="stark" <% if (formData.casa=="stark") { %>checked<% } %>> Casa Stark
+							</center>
+						</label>
         			</div>
         		</div>
 				
@@ -108,27 +132,26 @@
         			<div class="col-xs-2">
         				<img src="images/casa_targaryen.jpg" class="img-responsive img-radio">
 						<center>
-							<input type="radio" id="left-item" name="casa" value="targaryen"> Casa Targaryen
+							<input type="radio" id="left-item" name="casa" value="targaryen" <% if (formData.casa=="targaryen") { %>checked<% } %>> Casa Targaryen
 						</center>
         			</div>
 					
 					<div class="col-xs-2">
         				<img src="images/casa_tully.jpg" class="img-responsive img-radio">
 						<center>
-							<input type="radio" id="left-item" name="casa" value="tully"> Casa Tully
+							<input type="radio" id="left-item" name="casa" value="tully" <% if (formData.casa=="tully") { %>checked<% } %>> Casa Tully
 						</center>
         			</div>
 					
 					<div class="col-xs-2">
         				<img src="images/casa_tyrell.jpg" class="img-responsive img-radio">
 						<center>
-							<input type="radio" id="left-item" name="casa" value="tyrell"> Casa Tyrell
+							<input type="radio" id="left-item" name="casa" value="tyrell" <% if (formData.casa=="tyrell") { %>checked<% } %>> Casa Tyrell
 						</center>
         			</div>
 					
 					<div class="col-xs-3"></div>
 				</div>		
-				
 			
 				<div class="form-group row">
 					<button type="submit" class="btn btn-primary">Confirmar cadastro</button>
