--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -19,6 +19,27 @@
 				$('#btn_sair').click(function() {
 					window.open('/sair', '_self');
 				});
+
+				$('#btn_suditos').click(function() {
+					$.ajax({
+						url: '/suditos',
+						method: 'get',
+						success: function(data) {
+							$('#acoes').html(data);
+						}
+					});
+				});
+
+				$('#btn_pergaminhos').click(function() {
+					$.ajax({
+						url: '/pergaminhos',
+						method: 'get',
+						success: function(data) {
+							$('#acoes').html(data);
+						}
+					});
+				});
+
 			});
 		</script>
 
@@ -69,7 +90,7 @@
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes"></div>					
+					<div class="acoes" id="acoes">Senhor, o que deseja fazer hoje?</div>					
 				</div>
 			</div>
 			
@@ -80,12 +101,12 @@
 			
 				<div class="row">
 					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões"/>
+						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btn_suditos" />
 						<span><%= jogo.suditos %></span>
 					</div>
 					
 					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"/>
+						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btn_pergaminhos" />
 					</div>
 					
 					<div class="col-sm-8"></div>
