--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -21,6 +21,8 @@
 				});
 
 				$('#btn_suditos').click(function() {
+					$('#msg_erros').hide();
+
 					$.ajax({
 						url: '/suditos',
 						method: 'get',
@@ -31,6 +33,8 @@
 				});
 
 				$('#btn_pergaminhos').click(function() {
+					$('#msg_erros').hide();
+
 					$.ajax({
 						url: '/pergaminhos',
 						method: 'get',
@@ -86,16 +90,26 @@
 					</div>
 				</div>
 	    	</div>
-			
+
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes" id="acoes">Senhor, o que deseja fazer hoje?</div>					
+					<div class="acoes" id="acoes">
+						Senhor, o que deseja fazer hoje?
+
+						<% if (validacao=='S') { %>
+							<br>
+							<div class="alert alert-danger" id="msg_erros">
+								Existem erros de validação no form.
+							</div>
+						<% } %>
+					
+					</div>
 				</div>
 			</div>
-			
+
 		</div>	
-		
+
 		<div class="barra-inferior">
 			<div class="container">
 			
