Saving user actions

--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -21,7 +21,7 @@
 				});
 
 				$('#btn_suditos').click(function() {
-					$('#msg_erros').hide();
+					$('#msg').hide();
 
 					$.ajax({
 						url: '/suditos',
@@ -33,7 +33,7 @@
 				});
 
 				$('#btn_pergaminhos').click(function() {
-					$('#msg_erros').hide();
+					$('#msg').hide();
 
 					$.ajax({
 						url: '/pergaminhos',
@@ -99,8 +99,15 @@
 
 						<% if (validacao=='S') { %>
 							<br>
-							<div class="alert alert-danger" id="msg_erros">
+							<div class="alert alert-danger" id="msg">
 								Existem erros de validação no form.
+							</div>
+						<% } %>
+
+						<% if (validacao=='success') { %>
+							<br>
+							<div class="alert alert-success" id="msg">
+								Ação executada com sucesso!
 							</div>
 						<% } %>
 					
