Fetch user actions and display on view

--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -1,10 +1,30 @@
 <div id="pergaminhos">					
 	<h3>Pergaminhos</h3>
 	
-	<ul>
-		<li>1 enforcamento(s) programado - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>2 aldeão(ões) em treinamento de magia - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>1 aldeão(ões) em treinamento de história - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>5 aldeão(ões) coletando recursos - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-	</ul>
+	<% if (acoes.length) { %>
+		<ul>
+			<% for (var i = 0; i < acoes.length; i++) { %>
+
+				<%
+				var txt_acao = '';
+				switch (parseInt(acoes[i].acao)) {
+					case 1: txt_acao = 'coletando recursos'; break;
+					case 2: txt_acao = 'enforcamento(s) programado'; break;
+					case 3: txt_acao = 'em treinamento de história'; break;
+					case 4: txt_acao = 'em treinamento de magia'; break;
+				}
+
+				var date = new Date();
+				var momento_atual = date.getTime();
+
+				var tempo_restante = Math.round((acoes[i].tempo_para_terminar - momento_atual) / 1000);
+				%>
+
+				<li>
+					<%= acoes[i].quantidade %> <%= txt_acao %> - <small>restam <%= tempo_restante %> segundos - <a href="#">revogar ordem</a></small>
+				</li>
+			<% } %>
+		</ul>
+	<% } %>
+
 </div>
