Revoking user-actions

--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -131,6 +131,13 @@
 								Ação executada com sucesso!
 							</div>
 						<% } %>
+
+						<% if (validacao=='success_revoke') { %>
+							<br>
+							<div class="alert alert-success" id="msg">
+								Ação revogada com sucesso.
+							</div>
+						<% } %>
 					
 					</div>
 				</div>
