--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -21,7 +21,7 @@
 				%>
 
 				<li>
-					<%= acoes[i].quantidade %> <%= txt_acao %> - <small>restam <span class="segundos"><%= tempo_restante %></span> segundos - <a href="#">revogar ordem</a></small>
+					<%= acoes[i].quantidade %> <%= txt_acao %> - <small>restam <span class="segundos"><%= tempo_restante %></span> segundos - <a href="/revogar_ordem?ordem=<%= acoes[i]._id %>">revogar ordem</a></small>
 				</li>
 			<% } %>
 		</ul>
